test-package-compiler/tests/snapshots/compiler_tests__sealed_class_violation_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [
        ClassDefinition {
            name: Identifier {
                name: "MyInt",
                span: Span {
                    start: 197,
                    end: 202,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Integer",
                    span: Span {
                        start: 179,
                        end: 186,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Object,
            is_abstract: false,
            is_sealed: false,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [],
            methods: [
                MethodDefinition {
                    selector: Unary(
                        "doubled",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: MessageSend {
                                receiver: Identifier(
                                    Identifier {
                                        name: "self",
                                        span: Span {
                                            start: 217,
                                            end: 221,
                                        },
                                    },
                                ),
                                selector: Binary(
                                    "*",
                                ),
                                arguments: [
                                    Literal(
                                        Integer(
                                            2,
                                        ),
                                        Span {
                                            start: 224,
                                            end: 225,
                                        },
                                    ),
                                ],
                                is_cast: false,
                                span: Span {
                                    start: 217,
                                    end: 225,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 206,
                        end: 225,
                    },
                },
            ],
            class_methods: [],
            class_variables: [],
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 179,
                            end: 186,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 179,
                            end: 186,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test that subclassing a sealed class produces a diagnostic error.",
                        span: Span {
                            start: 179,
                            end: 186,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Integer is a built-in sealed class.",
                        span: Span {
                            start: 179,
                            end: 186,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: true,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            shape_version: None,
            type_params: [],
            superclass_type_args: [],
            uses: [],
            span: Span {
                start: 179,
                end: 225,
            },
        },
    ],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [],
    span: Span {
        start: 179,
        end: 225,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
