test-package-compiler/tests/snapshots/compiler_tests__sealed_class_violation_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (1):
  - Cannot subclass sealed class `Integer`
