test-package-compiler/tests/snapshots/compiler_tests__sealed_method_override_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("Object"), span: Span { start: 203, end: 209 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// Test that overriding a sealed method produces a diagnostic error."), Whitespace("\n"), LineComment("// Parent defines a sealed method, Child tries to override it."), Whitespace("\n\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("subclass:"), span: Span { start: 210, end: 219 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("Parent"), span: Span { start: 220, end: 226 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("sealed"), span: Span { start: 230, end: 236 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("frozen"), span: Span { start: 237, end: 243 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 244, end: 246 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("42"), span: Span { start: 247, end: 249 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("Object"), span: Span { start: 250, end: 256 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("subclass:"), span: Span { start: 257, end: 266 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("AllowedChild"), span: Span { start: 267, end: 279 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("frozen"), span: Span { start: 283, end: 289 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 290, end: 292 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("99"), span: Span { start: 293, end: 295 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("Parent"), span: Span { start: 296, end: 302 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("subclass:"), span: Span { start: 303, end: 312 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("Child"), span: Span { start: 313, end: 318 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("frozen"), span: Span { start: 322, end: 328 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 329, end: 331 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("99"), span: Span { start: 332, end: 334 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 335, end: 335 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
