test-package-compiler/tests/snapshots/compiler_tests__sealed_method_override_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [
        ClassDefinition {
            name: Identifier {
                name: "Parent",
                span: Span {
                    start: 220,
                    end: 226,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Object",
                    span: Span {
                        start: 203,
                        end: 209,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Object,
            is_abstract: false,
            is_sealed: false,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [],
            methods: [
                MethodDefinition {
                    selector: Unary(
                        "frozen",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: Literal(
                                Integer(
                                    42,
                                ),
                                Span {
                                    start: 247,
                                    end: 249,
                                },
                            ),
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: true,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 230,
                        end: 249,
                    },
                },
            ],
            class_methods: [],
            class_variables: [],
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 203,
                            end: 209,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 203,
                            end: 209,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test that overriding a sealed method produces a diagnostic error.",
                        span: Span {
                            start: 203,
                            end: 209,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Parent defines a sealed method, Child tries to override it.",
                        span: Span {
                            start: 203,
                            end: 209,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: true,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            shape_version: None,
            type_params: [],
            superclass_type_args: [],
            uses: [],
            span: Span {
                start: 203,
                end: 249,
            },
        },
        ClassDefinition {
            name: Identifier {
                name: "AllowedChild",
                span: Span {
                    start: 267,
                    end: 279,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Object",
                    span: Span {
                        start: 250,
                        end: 256,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Object,
            is_abstract: false,
            is_sealed: false,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [],
            methods: [
                MethodDefinition {
                    selector: Unary(
                        "frozen",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: Literal(
                                Integer(
                                    99,
                                ),
                                Span {
                                    start: 293,
                                    end: 295,
                                },
                            ),
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 283,
                        end: 295,
                    },
                },
            ],
            class_methods: [],
            class_variables: [],
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            shape_version: None,
            type_params: [],
            superclass_type_args: [],
            uses: [],
            span: Span {
                start: 250,
                end: 295,
            },
        },
        ClassDefinition {
            name: Identifier {
                name: "Child",
                span: Span {
                    start: 313,
                    end: 318,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Parent",
                    span: Span {
                        start: 296,
                        end: 302,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Object,
            is_abstract: false,
            is_sealed: false,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [],
            methods: [
                MethodDefinition {
                    selector: Unary(
                        "frozen",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: Literal(
                                Integer(
                                    99,
                                ),
                                Span {
                                    start: 332,
                                    end: 334,
                                },
                            ),
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 322,
                        end: 334,
                    },
                },
            ],
            class_methods: [],
            class_variables: [],
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            shape_version: None,
            type_params: [],
            superclass_type_args: [],
            uses: [],
            span: Span {
                start: 296,
                end: 334,
            },
        },
    ],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [],
    span: Span {
        start: 203,
        end: 334,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
