test-package-compiler/tests/snapshots/compiler_tests__sealed_method_override_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (2):
  - Cannot override sealed method `frozen` from class `Parent`
  - Multiple classes in one file is not supported. Found classes: Parent, AllowedChild, Child. Each class should be in its own .bt file.
