test-package-compiler/tests/snapshots/compiler_tests__self_send_class_var_less_base_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [
        ClassDefinition {
            name: Identifier {
                name: "ClassVarLessBase",
                span: Span {
                    start: 211,
                    end: 227,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Object",
                    span: Span {
                        start: 194,
                        end: 200,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Object,
            is_abstract: false,
            is_sealed: false,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [],
            methods: [],
            class_methods: [
                MethodDefinition {
                    selector: Unary(
                        "foo",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: Literal(
                                Integer(
                                    1,
                                ),
                                Span {
                                    start: 243,
                                    end: 244,
                                },
                            ),
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: true,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 230,
                        end: 244,
                    },
                },
                MethodDefinition {
                    selector: Unary(
                        "bar",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: MessageSend {
                                receiver: Identifier(
                                    Identifier {
                                        name: "self",
                                        span: Span {
                                            start: 261,
                                            end: 265,
                                        },
                                    },
                                ),
                                selector: Unary(
                                    "foo",
                                ),
                                arguments: [],
                                is_cast: false,
                                span: Span {
                                    start: 261,
                                    end: 269,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: true,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 248,
                        end: 269,
                    },
                },
            ],
            class_variables: [],
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 194,
                            end: 200,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 194,
                            end: 200,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "BT-3666: a base class with no classState: still returns class_var_result when a late-bound self-send rebinds ClassVars.",
                        span: Span {
                            start: 194,
                            end: 200,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: true,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            shape_version: None,
            type_params: [],
            superclass_type_args: [],
            uses: [],
            span: Span {
                start: 194,
                end: 269,
            },
        },
    ],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [],
    span: Span {
        start: 194,
        end: 269,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
